[project]
name = "wasocshared"
version = "0.1.0"
description = "WA SOC shared guidance and advisory site"
readme = "docs/README.md"
requires-python = ">=3.13"
dependencies = [
  "mkdocs==1.6.1",
  "mkdocs-git-revision-date-localized-plugin==1.5.3",
  "mkdocs-macros-plugin==1.5.0",
  "mkdocs-material==9.7.6",
  "mkdocs-redirects==1.2.3",
  "pymdown-extensions==10.21.3",
  "sendgrid==6.12.5",
  "feedgen==1.0.0",
  "properdocs==1.6.7",
]

[dependency-groups]
dev = [
  "mdformat-gfm==1.0.0",
  "mdformat-mkdocs[recommended]==5.1.4",
  "pytest==9.0.3",
  "ruff==0.15.18",
  "taplo==0.9.3",
]

[tool.uv]
package = false


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
