[project]
name = "wasocshared"
version = "0.1.0"
description = "WA SOC shared guidance and advisory site"
readme = "docs/README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "feedgen==1.0.0",
  "markdown==3.10.2",
  "mkdocs-macros-plugin==1.5.0",
  "mkdocs-material==9.7.7",
  "mkdocs-redirects==1.2.3",
  "properdocs==1.6.7",
  "pymdown-extensions==11.0.1",
  "sendgrid==6.12.5",
]

[dependency-groups]
dev = [
  "mdformat==1.0.0",
  "mdformat-mkdocs[recommended]==5.2.1",
  "pytest==9.1.1",
  "ruff==0.15.22",
  "taplo==0.9.3",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
